cmake_minimum_required (VERSION 3.8)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 11)

add_executable(DoublyLinkedListSimple "DoublyLinkedList.c")
add_executable(DoublyLinkedList "DoublyLinkedList.cpp")
add_executable(BinaryTree "BinaryTree.cpp")
add_executable(StringReverse "StringReverse.cpp")
add_executable(FizzBuzz "FizzBuzz.cpp")